tests/invalid/Public_Invalid_2.whiley
type Hidden is (int x) where x >= 5
public type Visible is Hidden[] field

